--- a/LaTex/capitulos/desarrollo_matematico.tex
+++ b/LaTex/capitulos/desarrollo_matematico.tex
@@ -1093,7 +1093,7 @@ Para cerrar este análisis, se presenta la Tabla~\ref{tabla:tabla-conclusion} co
         \Block[draw]{5-1}{Paisaje de \\ \\ optimización} & \Block[draw]{5-1}{Localmente convexo \\ \\ Mínimos locales aislados} & \Block[draw]{5-1}{No localmente convexo \\ Múltiples mínimos globales formando \\ variedades continuas \\ Cumple la condición $\mu$-PL} \\ \\ \\ \\ \\
 
         \hline
-        \Block[draw]{3-1}{Modelo óptimo} & \Block[draw]{3-1}{\text{Sweet spot} (mínimo de la curva ``U'') \\ (difícil de conseguir)} & \Block[draw]{3-1}{Cualquier minimizador global \\ (fácil de encontrar)} \\ \\ \\
+        \Block[draw]{3-1}{Modelo óptimo} & \Block[draw]{3-1}{\textit{Sweet spot} (mínimo de la curva ``U'') \\ (difícil de conseguir)} & \Block[draw]{3-1}{Cualquier minimizador global \\ (fácil de encontrar)} \\ \\ \\
 
         \hline
         \Block[draw]{3-1}{Convergencia del GD} & \Block[draw]{3-1}{GD converge a un mínimo local} & \Block[draw]{3-1}{GD converge a un mínimo global} \\ \\ \\
